--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "prepare": "./scripts/prepare.sh",
     "build": "./scripts/build.sh",
-    "start:server": "node ./dist/server.js",
-    "start:client": "http-server ./dist -c-1 -o"
+    "start": "node ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,15 +20,16 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "eventemitter3": "^5.0.0",
+    "express": "^4.18.2",
     "flatbuffers": "^23.3.3",
     "knuth-shuffle-seeded": "^1.0.6",
     "ws": "^8.12.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/knuth-shuffle-seeded": "^1.0.0",
     "@types/ws": "^8.5.4",
     "esbuild": "^0.17.11",
-    "http-server": "^14.1.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
